--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy-gcp": "gsutil cp -r dist/* gs://vite-app"
   },
   "dependencies": {
+    "firebase": "^10.7.1",
     "html-react-parser": "^5.0.11",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
